# Agentic-RAG

./: .env.example  .gitignore  COMPLETE_INVENTORY.md  CONTRIBUTING.md  DEVELOPER_GUIDE.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  PROJECT_SETUP_COMPLETE.md  README.md  __init__.py  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  test1.py
common/: __init__.py  base_service.py  database_models.py  exceptions.py
common/config/: __init__.py  settings.py
common/observability/: __init__.py  logging.py
common/schemas/: __init__.py  workflow.py
docs/: ARCHITECTURE.md  DEPLOYMENT.md  DOCUMENT_INGESTION_EXPLAINED.md  PRODUCTION_ARCHITECTURE.md
dvc_config/: README.md
infrastructure/: nginx.conf
infrastructure/ansible/: deploy.yml
infrastructure/kubernetes/: deployment.yaml
infrastructure/mongodb-init/: init.js
infrastructure/terraform/: main.tf  variables.tf
monitoring/: alert_rules.yml  datasources.yml  grafana-datasources.yml  prometheus.yml
services/agent_orchestration/: Dockerfile  README.md  __init__.py  requirements.txt
services/agent_orchestration/app/: __init__.py  main.py
services/document_ingestion/: Dockerfile  README.md  __init__.py  requirements.txt
services/document_ingestion/app/: __init__.py  main.py
services/document_ingestion/app/core/: ingestion_service.py
services/document_ingestion/app/handlers/: s3_handler.py
services/document_ingestion/app/utils/: hash_utils.py
services/document_parsing/: Dockerfile  README.md  __init__.py  requirements.txt
services/document_parsing/app/: __init__.py  main.py
services/document_parsing/app/parsers/: base_parser.py  docx_parser.py  image_parser.py  pdf_parser.py  spreadsheet_parser.py
services/embedding_service/: Dockerfile  README.md  __init__.py  requirements.txt
services/embedding_service/app/: __init__.py  main.py
services/evaluation_service/: Dockerfile  README.md  __init__.py  requirements.txt
services/evaluation_service/app/: __init__.py  main.py
services/query_processing/: Dockerfile  README.md  __init__.py  requirements.txt
services/query_processing/app/: __init__.py  main.py
services/query_processing/app/agents/: __init__.py  agent_orchestrator.py
services/query_processing/app/cache/: __init__.py  cache_manager.py
services/query_processing/app/evaluation/: __init__.py  self_rag_evaluator.py
services/query_processing/app/memory/: memory_manager.py
services/query_processing/app/pipeline/: __init__.py  context_manager.py  prompt_builder.py  query_processor.py  response_formatter.py
services/retrieval_service/: Dockerfile  README.md  __init__.py  requirements.txt
services/retrieval_service/app/: __init__.py  main.py
tests/: test_health_contract.py
