[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-rag-platform"
version = "1.0.0"
description = "Production-grade Agentic RAG system with multi-agent orchestration"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "RAG Team", email = "team@ragplatform.com"}
]
keywords = ["rag", "agents", "llm", "langchain", "vector-db"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    # Core LLM and RAG
    "langchain>=0.1.0",
    "langgraph>=0.0.1",
    "langsmith>=0.0.77",
    "openai>=1.3.0",
    "pydantic>=2.0.0",
    
    # Multi-Agent Frameworks
    "crewai>=0.30.0",
    "pyautogen>=0.2.0",
    
    # Vector Databases
    "pinecone-client>=3.0.0",
    "weaviate-client>=3.24.0",
    "milvus>=2.2.16",
    
    # AWS Services
    "boto3>=1.28.0",
    "aioboto3>=12.0.0",
    
    # Document Processing
    "PyPDF2>=3.0.0",
    "python-docx>=0.8.11",
    "openpyxl>=3.1.0",
    "pytesseract>=0.3.10",
    "Pillow>=10.0.0",
    "pdf2image>=1.16.3",
    "docx2txt>=0.8",
    "unstructured>=0.11.0",
    "python-magic>=0.4.27",
    
    # LLM APIs
    "anthropic>=0.7.0",
    
    # Caching and Storage
    "redis>=5.0.0",
    "pymongo>=4.5.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    
    # Async and Concurrency
    "aiohttp>=3.8.0",
    "aiofiles>=23.2.0",
    "asyncio-contextmanager>=1.0.0",
    
    # Message Queues
    "pika>=1.3.0",
    "python-json-logger>=2.0.7",
    
    # Monitoring and Observability
    "prometheus-client>=0.18.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-instrumentation>=0.41b0",
    "opentelemetry-instrumentation-fastapi>=0.41b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.41b0",
    "opentelemetry-exporter-jaeger>=1.20.0",
    "python-json-logger>=2.0.7",
    
    # Evaluation and Metrics
    "ragas>=0.0.50",
    "evaluate>=0.4.0",
    "scikit-learn>=1.3.0",
    
    # Data Processing
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "langdetect>=1.0.9",
    
    # Utilities
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "tenacity>=8.2.0",
    "click>=8.1.0",
    "typer>=0.9.0",
    "loguru>=0.7.2",
    "tqdm>=4.66.0",
    
    # API Framework
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic-settings>=2.0.0",
    
    # Version Control for Data
    "dvc>=3.45.0",
    "dvc-s3>=3.0.0",
    
    # Rate Limiting and Retry
    "ratelimit>=2.2.1",
    "backoff>=2.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "black>=23.10.0",
    "flake8>=6.1.0",
    "isort>=5.12.0",
    "mypy>=1.6.0",
    "pre-commit>=3.5.0",
    "ipython>=8.16.0",
    "jupyter>=1.0.0",
    "notebook>=7.0.0",
]

docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0",
    "mkdocstrings>=0.24.0",
]

[tool.setuptools]
packages = ["agentic_rag", "services", "common"]

[tool.black]
line-length = 100
target-version = ["py310", "py311"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
skip_glob = ["*/migrations/*"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --cov=agentic_rag --cov-report=html --cov-report=term-missing"
